src/bindings/dilution.h

/******************************************************************************
 *                      Code generated with sympy 0.7.2                       *
 *                                                                            *
 *              See http://www.sympy.org/ for more information.               *
 *                                                                            *
 *                        This file is part of 'P2VV'                         *
 ******************************************************************************/


#ifndef P2VV__DILUTION__H
#define P2VV__DILUTION__H

double dD1_ddms(double st, double dms, double sf1, double f, double sf2);
double dD1_df(double st, double dms, double sf1, double f, double sf2);
double dD1_dst(double st, double dms, double sf1, double f, double sf2);
double dD1_dsf1(double st, double dms, double sf1, double f, double sf2);
double dD1_dsf2(double st, double dms, double sf1, double f, double sf2);
double dDc_dst(double st, double dms, double sfc, double f, double sf2);
double dDc_df(double st, double dms, double sfc, double f, double sf2);
double dDc_dsfc(double st, double dms, double sfc, double f, double sf2);
double dDc_dsf2(double st, double dms, double sfc, double f, double sf2);
double dDc_ddms(double st, double dms, double sfc, double f, double sf2);

#endif